# Evgene-Kopylov.github.io

./: .gitignore  README.md  index.html
Kadabra/: index.html
Kadabra/src/: main.rs
collect_res/: Cargo.toml  index.html
collect_res/src/: main.rs
collect_resources/: Cargo.toml  index.html
collect_resources/src/: interactables.rs  main.rs  select_frame.rs  unit.rs
pointer/: Cargo.toml  index.html
pointer/src/: main.rs  main_unit.rs  pointer.rs  projectile.rs  scene.rs  settings.rs  target_unit.rs
python_in_browser/: Cargo.toml  index.html
python_in_browser/static/js/: main.js
res_collecto/: Cargo.toml  index.html
res_collecto/src/: main.rs  select_frame.rs  settings.rs  unit.rs
settings/: Cargo.toml
settings/src/: lib.rs
shift_move/: Cargo.toml  index.html
shift_move/src/: main.rs
unit_aim/: Cargo.toml  index.html
wasd_rect/: Cargo.toml  index.html
wasd_rect/src/: main.rs
woodlouse/: Cargo.toml  index.html
woodlouse/src/: main.rs
